<resources>
    <string name="app_name">Gestión Servicios</string>
    <string name="text_string">Esto es una prueba de mi primer string</string>
    <string name="text_color_layout">Add friend!</string>
    <string name="text_default_change_image">No has seleccionado nada.</string>

    <string name="message_error_required_frase">Es necesario ingresar la frase del personaje</string>
    <string name="message_error_required_email">Es necesario ingresar el correo electrónico</string>
    <string name="message_error_required_password">Es necesario ingresar la contraseña</string>

    <string name="message_error_required_name">Es necesario ingresar el nombre</string>
    <string name="message_error_required_address">Es necesario ingresar la dirección</string>

    <string name="message_error_invalid_email">El correo electrónico ingresado es inválido</string>
    <string name="message_error_invalid_password">La contraseña ingresada es inválida</string>

    <string name="message_successfull_login">Has inciado sesión.</string>

    <!--Formularios-->
    <string name="frm_name"> Nombre </string>
    <string name="frm_last_name"> Apellido </string>
    <string name="frm_email"> Correo </string>
    <string name="frm_address"> Dirección </string>
    <string name="frm_save"> Guardar </string>
    <string name="frm_end"> Finalizar </string>

    <string name="frm_hint_messages"> Ingresa un mensaje. </string>


    <!--Menú Profile Activity -->
    <string name="menu_inicio"> Inicio </string>
    <string name="menu_configuracion"> Configuración </string>
    <string name="menu_cerrar_sesion"> Cerrar sesión </string>

    <!--Menú Alta usuario-->
    <string name="menu_tareas"> Tareas </string>
    <string name="menu_datos_usuario"> Datos Usuario </string>
    <string name="menu_direccion"> Dirección </string>

    <string name="red">RED</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="empty_input_message">No ingresaaste nada en el mensaje</string>
    <string name="insert_a_message_to_send">Ingresa un mensaje a enviar</string>

    <string-array name="country_arrays">
        <item>México🇲🇽</item>
        <item>Malaysia 🇲🇾</item>
        <item>United States 🇺🇸</item>
        <item>Indonesia 🇮🇩</item>
        <item>France 🇫🇷</item>
        <item>Italy 🇮🇹</item>
        <item>Singapore 🇸🇬</item>
        <item>New Zealand 🇳🇿</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_navigation_general">NavigationGeneralActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">NavigationActivity</string>
</resources>
