<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".viewlogincomponent.ProfileActivity">
    <item android:id="@+id/action_notification1"
        android:icon="@drawable/ic_menu"
        android:title="action_notification"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/item1"
                android:title="@string/menu_inicio"
                android:icon="@drawable/ic_man_user"
                android:orderInCategory="1"/>
            <item android:id="@+id/item2"
                android:title="@string/menu_configuracion"
                android:icon="@drawable/ic_settings_work_tool"
                android:orderInCategory="2"
                />
            <item android:id="@+id/item3"
                android:title="@string/menu_cerrar_sesion"
                android:icon="@drawable/ic_logout"
                android:orderInCategory="3"
                />
        </menu>
    </item>
</menu>